[tool.poetry]
name = "test-agent"
version = "0.1.0"
description = ""
authors = ["Thiago F Pappacena <pappacena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
accelerate = "^0.29.2"
bitsandbytes = "^0.43.1"
transformers = "^4.39.3"
wikipedia = "^1.4.0"
numexpr = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
